# aiorate

./: CHANGELOG.md  README.md  pyproject.toml  tox.ini
aiorate/: __init__.py  rate.py
doc/: Makefile
doc/src/: conf.py  example.rst  index.rst  installation.rst  rate-limiter.rst  rate.rst
examples/: multiple_loops.py  print_loop.py
tests/: __init__.py  test_rate.py
