[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiorate"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.8"
homepage = "https://github.com/tasts-robots/aiorate"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []
keywords = ["rate", "loop", "frequency", "regulator"]

[project.optional-dependencies]
doc = [
    "sphinx",
]

[project.urls]
Documentation = "https://scaron.info/doc/aiorate/"
Source = "https://github.com/tasts-robots/aiorate"
Tracker = "https://github.com/tasts-robots/aiorate/issues"
Changelog = "https://github.com/tasts-robots/aiorate/blob/master/CHANGELOG.md"

[tool.black]
line-length = 79

[tool.flit.module]
name = "aiorate"
